added edit button to news#show page

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -408,3 +408,11 @@ body {
 .faq dd {
   margin-bottom: 1em;
 }
+
+.link-action {
+  font-size: 20px;
+  
+  &.link-danger {
+    color: #d9534f;
+  }
+}
